--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ./src
       args:
       - APP=/srv/qrcode-generator
+    volumes:
+      - ./convert_to_qr:/etc/convert_to_qr
     environment:
     - SERVER_HOST=0.0.0.0
     - SERVER_PORT=8000
